examples/ZenohCS/NativeMethods.cs


        /// <summary>
        ///  Returns reply error encoding.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reply_err_encoding", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_reply_err_encoding(z_loaned_reply_err_t* this_);

        /// <summary>
        ///  Borrows reply error.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reply_err_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_reply_err_t* z_reply_err_loan(z_owned_reply_err_t* this_);

        /// <summary>
        ///  Frees the memory and resets the reply error it to its default value.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reply_err_drop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_reply_err_drop(z_moved_reply_err_t* this_);

        /// <summary>
        ///  Returns ``true`` if reply contains a valid response, ``false`` otherwise (in this case it contains a errror value).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reply_is_ok", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_reply_is_ok(z_loaned_reply_t* this_);

        /// <summary>
        ///  Yields the contents of the reply by asserting it indicates a success.
        ///
        ///  Returns `NULL` if reply does not contain a sample (i. e. if `z_reply_is_ok` returns ``false``).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reply_ok", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_sample_t* z_reply_ok(z_loaned_reply_t* this_);

        /// <summary>
        ///  Yields the contents of the reply by asserting it indicates a failure.
        ///
        ///  Returns `NULL` if reply does not contain a error  (i. e. if `z_reply_is_ok` returns ``true``).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reply_err", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_reply_err_t* z_reply_err(z_loaned_reply_t* this_);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Gets the id of the zenoh instance that answered this Reply.
        ///  @return `true` if id is present.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reply_replier_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_reply_replier_id(z_loaned_reply_t* @this, MaybeUninit* out_id);

        /// <summary>
        ///  Constructs the reply in its gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_reply_null", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_internal_reply_null(MaybeUninit* this_);

        /// <summary>
        ///  Constructs an owned shallow copy of reply in provided uninitialized memory location.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reply_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_reply_clone(MaybeUninit* dst, z_loaned_reply_t* this_);

        /// <summary>
        ///  Constructs default `z_get_options_t`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_get_options_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_get_options_default(MaybeUninit* this_);

        /// <summary>
        ///  Query data from the matching queryables in the system.
        ///  Replies are provided through a callback function.
        ///
        ///  @param session: The zenoh session.
        ///  @param key_expr: The key expression matching resources to query.
        ///  @param parameters: The query's parameters, similar to a url's query segment.
        ///  @param callback: The callback function that will be called on reception of replies for this query. It will be automatically dropped once all replies are processed.
        ///  @param options: Additional options for the get. All owned fields will be consumed.
        ///
        ///  @return 0 in case of success, a negative error value upon failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_get(z_loaned_session_t* session, z_loaned_keyexpr_t* key_expr, byte* parameters, z_moved_closure_reply_t* callback, z_get_options_t* options);

        /// <summary>
        ///  Frees reply, resetting it to its gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reply_drop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_reply_drop(z_moved_reply_t* this_);

        /// <summary>
        ///  Returns ``true`` if `reply` is valid, ``false`` otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_reply_check", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_internal_reply_check(z_owned_reply_t* this_);

        /// <summary>
        ///  Borrows reply.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reply_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_reply_t* z_reply_loan(z_owned_reply_t* this_);

        /// <summary>
        ///  Creates a default `z_query_consolidation_t` (consolidation mode AUTO).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_query_consolidation_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_query_consolidation_t z_query_consolidation_default();

        /// <summary>
        ///  Automatic query consolidation strategy selection.
        ///
        ///  A query consolidation strategy will automatically be selected depending the query selector.
        ///  If the selector contains time range properties, no consolidation is performed.
        ///  Otherwise the `z_query_consolidation_latest` strategy is used.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_query_consolidation_auto", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_query_consolidation_t z_query_consolidation_auto();

        /// <summary>
        ///  Latest consolidation.
        ///
        ///  This strategy optimizes bandwidth on all links in the system but will provide a very poor latency.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_query_consolidation_latest", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_query_consolidation_t z_query_consolidation_latest();

        /// <summary>
        ///  Monotonic consolidation.
        ///
        ///  This strategy offers the best latency. Replies are directly transmitted to the application when received
        ///  without needing to wait for all replies. This mode does not guarantee that there will be no duplicates.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_query_consolidation_monotonic", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_query_consolidation_t z_query_consolidation_monotonic();

        /// <summary>
        ///  No consolidation.
        ///
        ///  This strategy is useful when querying timeseries data bases or when using quorums.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_query_consolidation_none", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_query_consolidation_t z_query_consolidation_none();

        /// <summary>
        ///  Constructs a copy of the reply error message.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reply_err_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_reply_err_clone(MaybeUninit* dst, z_loaned_reply_err_t* @this);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Formats the `z_id_t` into 16-digit hex string (LSB-first order)
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_id_to_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_id_to_string(z_id_t* zid, MaybeUninit* dst);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Returns the session's Zenoh ID.
        ///
        ///  Unless the `session` is invalid, that ID is guaranteed to be non-zero.
        ///  In other words, this function returning an array of 16 zeros means you failed
        ///  to pass it a valid session.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_info_zid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_id_t z_info_zid(z_loaned_session_t* session);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Fetches the Zenoh IDs of all connected peers.
        ///
        ///  `callback` will be called once for each ID, is guaranteed to never be called concurrently,
        ///  and is guaranteed to be dropped before this function exits.
        ///
        ///  Retuns 0 on success, negative values on failure
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_info_peers_zid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_info_peers_zid(z_loaned_session_t* session, z_moved_closure_zid_t* callback);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Fetches the Zenoh IDs of all connected routers.
        ///
        ///  `callback` will be called once for each ID, is guaranteed to never be called concurrently,
        ///  and is guaranteed to be dropped before this function exits.
        ///
        ///  Retuns 0 on success, negative values on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_info_routers_zid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_info_routers_zid(z_loaned_session_t* session, z_moved_closure_zid_t* callback);

        /// <summary>
        ///  Constructs an owned key expression in a gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_keyexpr_null", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_internal_keyexpr_null(MaybeUninit* this_);

        /// <summary>
        ///  Constructs a view key expression in empty state
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_keyexpr_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_view_keyexpr_empty(MaybeUninit* this_);
